# We-Bussiness-Manager

./: .coverage  .env.example  .gitignore  AGENT_ARCHITECTURE.md  ARCHITECTURE_ANALYSIS.md  ARCHITECTURE_REVIEW.md  CHANGELOG.md  CHECKLIST.md  CODE_REVIEW.md  CONDA_ENV_SETUP.md  CONTRIBUTING.md  Dockerfile  FINAL_TEST_REPORT.md  ISSUES_FIXED.md  LICENSE  MANIFEST.in  MIGRATION_GUIDE.md  PARSING_REORGANIZATION.md  PARSING_REORGANIZATION_SUMMARY.md  PROJECT_STRUCTURE.md  PROJECT_TEMPLATE.md  QUICKSTART.md  README.md  REFACTORING_GUIDE.md  REFACTORING_SUMMARY.md  REUSABILITY_CHECKLIST.md  TESTING_README.md  TEST_QUICK_REFERENCE.md  TEST_RESULTS.md  TEST_UPDATE_COMPLETE.md  activate_env.sh  app.py  conda_setup_guide.md  config.ini  config.ini.example  debug_gym_agent.py  design.md  docker-compose.yml  main.py  pyproject.toml  (+2 more)
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
agent/: README.md  __init__.py  _version.py  agent.py
agent/functions/: __init__.py  discovery.py  executor.py  registry.py
agent/providers/: __init__.py  anthropic_base.py  base.py  claude_provider.py  minimax_provider.py  open_source_provider.py  openai_provider.py
business/: __init__.py  command_handler.py  commands.py  scheduler_tasks.py  therapy_store_adapter.py
config/: __init__.py  business_config.py  business_functions.py  known_entities.py  prompts.py  register_functions.py  settings.py
core/: __init__.py  bot.py  command_handler.py  message_router.py  scheduler.py
database/: __init__.py  base_crud.py  business_repos.py  connection.py  entity_repos.py  manager.py  system_repos.py
db/: base_repository.py  models.py  repository.py
design/: agent.md  database.md
docs/: minimax_implementation_summary.md  minimax_usage.md
examples/: GYM_AGENT_README.md  gym_agent_manager.py  minimax_example.py
examples/agent/: QUICKSTART.md  README.md  __init__.py  advanced_example.py  basic_example.py  basic_usage.py  function_calling_example.py  provider_example.py
examples/database/: QUICKSTART.md  README.md  __init__.py  basic_usage.py  business_repos_example.py  entity_repos_example.py  gym_example.py  hair_salon_example.py  system_repos_example.py
examples/wechat/: README.md  advanced_usage.py  basic_usage.py
interface/: README.md  __init__.py  base.py  manager.py
interface/web/: __init__.py  api.py
interface/wechat/: README.md  SETUP_GUIDE.md  __init__.py  bot.py  callback_server.py  manager.py  message_router.py  wecom_client.py
parsing/: entity_resolver.py  llm_parser.py  pipeline.py  preprocessor.py
scripts/: collect_chatids_from_callback.py  create_wechat_group.py  init_db.py  list_wechat_groups.py  setup_env.py  test_wechat_config.py
services/: inventory_svc.py  membership_svc.py  summary_svc.py
tests/: INTEGRATION_TEST_GUIDE.md  MODULE_TEST_REPORT.md  README.md  TESTING_GUIDE.md  TEST_DOCUMENTATION_INDEX.md  TEST_REFACTORING_SUMMARY.md  TEST_SUMMARY.md  conftest.py  run_all_tests.py  run_module_test.sh  run_module_tests.sh  test_command_handler.py  test_llm_parser.py  test_pipeline.py  test_preprocessor.py  test_repository.py  test_summary_svc.py
tests/agent/: README.md  __init__.py  conftest.py  run_tests.sh  test_agent.py  test_discovery.py  test_executor.py  test_gym_agent_integration.py  test_minimax.py  test_providers.py  test_registry.py  verify_minimax_integration.py
tests/database/: README.md  conftest.py  run_tests.sh  test_base_crud.py  test_business_repos.py  test_connection.py  test_entity_repos.py  test_integration.py  test_manager.py  test_models.py  test_system_repos.py
tests/fixtures/: sample_messages.json
tests/integration/: manual_test.py  test_end_to_end.py
tests/interface/: README.md  __init__.py  test_base.py  test_manager.py  test_wechat_bot.py  (+1 more)
