[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bizbot"
version = "0.1.0"
description = "AI-powered business management framework — manage your shop with natural language. LLM agent + database ORM + web dashboard."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Auromix", email = "auromix@github.com"},
]
keywords = [
    "ai-agent",
    "business-management",
    "llm",
    "function-calling",
    "small-business",
    "crm",
    "pos",
    "saas",
    "openai",
    "claude",
    "minimax",
    "sqlalchemy",
    "fastapi",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Office/Business",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Framework :: FastAPI",
    "Typing :: Typed",
]

dependencies = [
    "python-dotenv>=1.0.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "sqlalchemy>=2.0.0",
    "alembic>=1.12.0",
    "anthropic>=0.18.0",
    "openai>=1.0.0",
    "httpx>=0.24.0",
    "python-dateutil>=2.8.0",
    "loguru>=0.7.0",
]

[project.optional-dependencies]
web = [
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
]
scheduler = [
    "apscheduler>=3.10.0",
]
all = [
    "bizbot[web,scheduler]",
]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "flake8>=6.0.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "mypy>=1.5.0",
    "pre-commit>=3.5.0",
]

[project.urls]
Homepage = "https://github.com/Auromix/BizBot"
Documentation = "https://github.com/Auromix/BizBot#readme"
Repository = "https://github.com/Auromix/BizBot"
Issues = "https://github.com/Auromix/BizBot/issues"
Changelog = "https://github.com/Auromix/BizBot/blob/main/CHANGELOG.md"

[project.scripts]
bizbot = "app:main"

[tool.setuptools.packages.find]
include = ["agent*", "config*", "database*", "interface*", "scripts*"]
exclude = ["tests*", "examples*", "design*", "data*", "logs*"]

[tool.setuptools.package-data]
"interface.web" = ["*.html", "*.css", "*.js", "templates/**/*", "static/**/*"]

# ==================== Tool Configuration ====================

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]

[tool.isort]
profile = "black"
line_length = 100
known_first_party = ["agent", "config", "database", "interface", "scripts"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
addopts = "-v --tb=short"
filterwarnings = [
    "ignore::DeprecationWarning",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks integration tests requiring external services",
]

[tool.coverage.run]
source = ["agent", "database", "interface", "config"]
omit = [
    "tests/*",
    "examples/*",
    "scripts/*",
    "*/migrations/*",
]

[tool.coverage.report]
show_missing = true
skip_covered = true
fail_under = 50
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if __name__ == .__main__.",
    "raise NotImplementedError",
    "pass",
    "except ImportError",
]


